# BigScenes

./: .gitignore  CMakeLists.txt  GEFS - Installation README.docx  README.md  license.txt
GEFS/: imgui.ini  settings.cfg
GEFS/Chalet/: Prefabs.txt  main.lua
GEFS/Chalet_LOD0/: Prefabs.txt  Scene.txt  main.lua
GEFS/CommonLibs/: vec3.lua
GEFS/Daniel/: Prefabs.txt  Scene.txt  main.lua
GEFS/ModelViewer/: Prefabs.txt  Scene.txt  main.lua  materials.txt
GEFS/SimpleExample/: Prefabs.txt  main.lua  materials.txt
GEFS/Teapot/: Prefabs.txt  main.lua
GEFS/models/: 10523_Pool_Table_v1_L3.mtl  Bookcase_Books.mtl  Soccer.mtl  TowerWindmill.mtl  chalet_lod2.obj.mtl  cubeOuter.mtl  fancyCube.mtl  head.mtl  mpm_f16__Thonet_S43_chair.mtl  pan.mtl  the_crowned_ring.mtl
GEFS/shaders/: blur-frag.glsl  blur-vert.glsl  depth-frag.glsl  depth-vert.glsl  fragmentTex.glsl  quad-frag.glsl  skybox-frag.glsl  skybox-vert.glsl  vertexTex.glsl
GEFS/table/: Materials.txt  Prefabs.txt  Scene.txt  main.lua
INSTRUCTIONS/: Resources.txt
Lua/: camera.lua
engineCode/: Bloom.cpp  Bloom.h  CollisionSystem.cpp  CollisionSystem.h  GPU-Includes.h  Materials.cpp  Materials.h  Models.cpp  Models.h  RenderingCore.h  RenderingSystem.cpp  RenderingSystem.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Shadows.cpp  Shadows.h  Skybox.cpp  Skybox.h  Sound.cpp  Sound.h  WindowManager.cpp  WindowManager.h  controller.cpp  controller.h  keyboard.cpp  keyboard.h  luaSupport.cpp  luaSupport.h  main.cpp
imgui/: imgui_impl_sdl.cpp
